--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,21 @@
 version: '2'
-
 services:
-
-  app:
-    build: ./docker/
-    # command: manage.py runserver 0.0.0.0:8000
+  php:
+    image: yiisoftware/yii2-php:7.1-apache
+    working_dir: /app
     volumes:
-      - ./:/var/www/html
+      - ~/.composer-docker/cache:/root/.composer/cache:delegated
+      - ./:/app:delegated
     ports:
-    - 8000:80
-    links:
-    - database
-    depends_on:
-    - database
+      - '8000:80'
+    depends_on: 
+      - db
 
-  database:
+  db:
     image: mysql:5.7
-    ports:
-      - 3306:3306
+    command: --default-authentication-plugin=mysql_native_password
     environment:
-      MYSQL_ROOT_PASSWORD: "secret"
-      MYSQL_DATABASE: "fn_db"
-      # MYSQL_USER: "${DB_USERNAME}"
-      # MYSQL_PASSWORD: "${DB_PASSWORD}"
-    volumes:
-     - ./storage/mysql:/var/lib/mysql
+      - MYSQL_DATABASE=fn_db
+      - MYSQL_ROOT_PASSWORD=secret
+      - MYSQL_USER=uroot
+      - MYSQL_PASSWORD=usecret
