--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,5 @@ services:
       - MYSQL_ROOT_PASSWORD=secret
       - MYSQL_USER=uroot
       - MYSQL_PASSWORD=usecret
+    ports: 
+      - '3306:3306'
